// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should render modal when it not opened 1`] = `
<Modal
  ariaHideApp={false}
  bodyOpenClassName="ReactModal__Body--open"
  className="creasy-modal-dialog"
  closeTimeoutMS={0}
  contentElement={[Function]}
  isOpen={false}
  overlayClassName="creasy-modal-dialog__overlay"
  overlayElement={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  preventScroll={false}
  role="dialog"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <ModalHeader
    title="foo"
  />
  <div
    className="creasy-modal-dialog__content"
  >
    <Content />
  </div>
  <ModalFooter>
    Footer
  </ModalFooter>
</Modal>
`;

exports[`Modal should render modal when it opened 1`] = `
<Modal
  ariaHideApp={false}
  bodyOpenClassName="ReactModal__Body--open"
  className="creasy-modal-dialog"
  closeTimeoutMS={0}
  contentElement={[Function]}
  isOpen={true}
  overlayClassName="creasy-modal-dialog__overlay"
  overlayElement={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  preventScroll={false}
  role="dialog"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <ModalHeader
    title="foo"
  />
  <div
    className="creasy-modal-dialog__content"
  >
    <Content />
  </div>
  <ModalFooter>
    Footer
  </ModalFooter>
</Modal>
`;

exports[`Modal should render modal with header icon 1`] = `
<Modal
  ariaHideApp={false}
  bodyOpenClassName="ReactModal__Body--open"
  className="creasy-modal-dialog"
  closeTimeoutMS={0}
  contentElement={[Function]}
  isOpen={true}
  overlayClassName="creasy-modal-dialog__overlay"
  overlayElement={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  preventScroll={false}
  role="dialog"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <ModalHeader
    icon={<Unknown />}
    title="foo"
  />
  <div
    className="creasy-modal-dialog__content"
  >
    <Content />
  </div>
  <ModalFooter>
    Footer
  </ModalFooter>
</Modal>
`;
